--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.css"/>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&display=swap"
@@ -74,7 +74,7 @@
         </button>
       </div>
       <div class="menu-mob">
-        <button type="button" class="menu-closure-btn">
+        <button type="button" class="menu-close-btn">
           <svg class="menu-icon-btn" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -399,6 +399,7 @@
             <li class="fourth-content">
               <div class="fourth-cover-wrap">
                 <img
+                srcset="./images/bankaapp2.jpg"
                   src="./images/bankapp.jpg"
                   alt="Banking App"
                   width="360"
@@ -419,6 +420,7 @@
             <li class="fourth-content">
               <div class="fourth-cover-wrap">
                 <img
+                srcset="./images/CashlessPayment2.jpg"
                   src="./images/CashlessPayment.jpg"
                   alt="Cashless Payment"
                   width="360"
@@ -439,6 +441,7 @@
             <li class="fourth-content">
               <div class="fourth-cover-wrap">
                 <img
+                srcset="./images/meditationapp2.jpg"
                   src="./images/meditationapp.jpg"
                   alt="Meditation App"
                   width="360"
@@ -459,6 +462,7 @@
             <li class="fourth-content">
               <div class="fourth-cover-wrap">
                 <img
+                srcset="./images/taxiservsce2.jpg"
                   src="./images/taxiservice.jpg"
                   alt="Taxi Service"
                   width="360"
@@ -479,6 +483,7 @@
             <li class="fourth-content">
               <div class="fourth-cover-wrap">
                 <img
+                srcset="./images/screenillustrations2.jpg"
                   src="./images/screenillustrations.jpg"
                   alt="Screen Illustrations"
                   width="360"
@@ -499,6 +504,7 @@
             <li class="fourth-content">
               <div class="fourth-cover-wrap">
                 <img
+                srcset="./images/onlincourses2.jpg"
                   src="./images/onlinecourses.jpg"
                   alt="Online Courses"
                   width="360"
@@ -520,6 +526,7 @@
         </div>
       </section>
     </main>
+    <!---footer-->
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-container-one">
@@ -672,4 +679,4 @@
       </div>
     </div>
   </body>
-</html>
+</html
